--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
           <label for="meters">
             <span>Выберите счётчик</span>
             <select id="meters" required>
-              <option value="" selected disabled hidden>Choose here</option>
+              <option value="" selected disabled hidden value="">Please select</option>
               <option value="DS949321">ДС 949321</option>
               <option value="QA522010">КА 522010</option>
               <option value="LK309123">ЛК 309123</option>
@@ -57,21 +57,21 @@
               <div class="data__item data__previous">
                 <label for="previous">
                   <span>Предыдущие показания</span>
-                  <input id="previous" name="previous" type="text" autocomplete="off"
+                  <input id="previous" name="previous" type="number" autocomplete="off"
                     pattern="[0-9]{0,12}" />
                 </label>
               </div>
               <div class="data__item data__current">
                 <label for="current">
                   <span>Текущие показания</span>
-                  <input id="current" name="current" type="text" autocomplete="off"
+                  <input id="current" name="current" type="number" autocomplete="off"
                     pattern="[0-9]{0,12}" />
                 </label>
               </div>
               <div class="data__item data__payment">
                 <label for="payment">
                   <span>Показания на текущую дату</span>
-                  <input id="payment" name="payment" type="text" autocomplete="off"
+                  <input id="payment" name="payment" type="number" autocomplete="off"
                     pattern="[0-9]{0,12}" />
                 </label>
               </div>
