--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
         </div>
       </div>
       <div class="center">
-        <h2 class="center__title">Холодная вода</h2>
-        <p class="center__desc">Оплата холодного водоснабжения</p>
+        <!-- <h2 class="center__title">Холодная вода</h2>
+        <p class="center__desc">Оплата холодного водоснабжения</p> -->
         <p class="center__select-meters">
           <label for="meters">
             <span>Выберите счётчик</span>
@@ -80,21 +80,6 @@
           <div class="form__summary">
             <p class="form__summary-title">К оплате</p>
             <ul class="form__summary-list">
-              <!-- <li class="list__item">
-                <p><span class="list__item-label">ДС 949321</span>
-                  <span class="price">$ <b>621</b></span>
-                </p>
-              </li>
-              <li class="list__item">
-                <p><span class="list__item-label">КА 522010</span>
-                  <span class="price">$ <b>902</b></span>
-                </p>
-              </li>
-              <li class="list__item">
-                <p><span class="list__item-label">ЛК 309123</span>
-                  <span class="price">$ <b>173</b></span>
-                </p>
-              </li> -->
               <li class="list__item list__total">
                 <p><span class="list__item-label">Всего</span>
                   <span class="total-price">$ <span id="total"></span></span>
@@ -122,8 +107,6 @@
         <div class="right__transactions">
           <p class="transactions__title">Транзакции</p>
           <ul class="transactions__list">
-            <!-- <li class="list__item">Налоги: успешно оплачено</li>
-            <li class="list__item list__item-error">Охрана: ошибка транзакции</li> -->
           </ul>
         </div>
       </div>
